<resources>
    <string name="app_name">Shophop</string>
    <string name="sh_font_bold">fonts/Montserrat-Bold.ttf</string>
    <string name="sh_font_medium">fonts/Montserrat-Medium.ttf</string>
    <string name="sh_font_regular">fonts/Montserrat-Regular.ttf</string>
    <string name="sh_font_semi_bold">fonts/Montserrat-SemiBold.ttf</string>
    <string name="sh_lbl_sign_in">Sign In</string>
    <string name="sh_lbl_sign_up">Sign Up</string>
    <string name="sh_lbl_sign_in_with">Sign In with</string>
    <string name="sh_lbl_forgot">Forgot ?</string>
    <string name="sh_lbl_already_have_a_account">Already have a account?</string>
    <string name="sh_lbl_enter_the_code_nto_verify_email">Enter the Code to Verify Your Email</string>
    <string name="sh_lbl_we_have_sent_you_mail_with_verification_code_to">We have sent you mail with verification code to
        -
    </string>
    <string name="sh_lbl_tep_email">jonndeo@gmail.com</string>
    <string name="sh_lbl_did_not_receive">Didn\'t receive?</string>
    <string name="sh_lbl_resend_code">Resend code</string>
    <string name="sh_lbl_verify">Verify</string>
    <string name="sh_lbl_hi_we_re_woobox">Hi, We\'re Woobox!</string>
    <string name="sh_lbl_subheading">We make around your city Affordable, easy and efficient.</string>
    <string name="sh_lbl_my_order">My Order</string>
    <string name="sh_lbl_reward">Reward</string>
    <string name="sh_lbl_wish_list">Wishlist</string>
    <string name="sh_lbl_account">Account</string>
    <string name="sh_lbl_settings">Settings</string>
    <string name="sh_lbl_faq">FAQ</string>
    <string name="sh_lbl_help">Help</string>
    <string name="sh_lbl_contact_us">Contact us</string>
    <string name="sh_lbl_newest_product">Newest Product</string>
    <string name="sh_lbl_recent_search">Recent search</string>
    <string name="sh_lbl_Featured">Featured Products</string>
    <string name="sh_lbl_1">1</string>
    <string name="sh_lbl_add_to_cart">Add to Cart</string>
    <string name="sh_lbl_buy_now">Buy Now</string>
    <string name="sh_lbl_check_availability">Check Availability</string>
    <string name="sh_lbl_delivery_by">Delivery By</string>
    <string name="sh_lbl_brand">Brand</string>
    <string name="sh_lbl_colour">Colour</string>
    <string name="sh_lbl_height">Height</string>
    <string name="sh_lbl_clouser">Clouser</string>
    <string name="sh_lbl_lace_ups">Lace-ups</string>
    <string name="sh_lbl_pattern">Pattern</string>
    <string name="sh_lbl_rate_now">Rate Now</string>
    <string name="sh_lbl_5">5</string>
    <string name="sh_lbl_80">80</string>
    <string name="sh_lbl_4">4</string>
    <string name="sh_lbl_3">3</string>
    <string name="sh_lbl_2">2</string>
    <string name="sh_lbl_10">10</string>
    <string name="sh_lbl_reviews">Reviews</string>
    <string name="sh_lbl_filter">Filters</string>
    <string name="sh_lbl_categories">Categories</string>
    <string name="sh_lbl_more">More</string>
    <string name="sh_lbl_price">Price</string>
    <string name="sh_lbl_brands">Brands</string>
    <string name="sh_lbl_select_all">Select All</string>
    <string name="sh_lbl_colors">Colors</string>
    <string name="sh_lbl_size">Size</string>
    <string name="sh_lbl_discount">Discount</string>
    <string name="sh_lbl_ratings">Ratings</string>
    <string name="sh_lbl_reset">Reset</string>
    <string name="sh_lbl_apply">Apply</string>
    <string name="sh_lbl_less">Less</string>
    <string name="sh_lbl_delivered_on">Delivered on</string>
    <string name="sh_lbl_rated">Rated</string>
    <string name="sh_lbl_payment_details">Payment Detail</string>
    <string name="sh_lbl_offer">Offer -</string>
    <string name="sh_lbl_shipping_charge">Shipping Charge -</string>
    <string name="sh_lbl_total_amount">Total Amount -</string>
    <string name="sh_lbl_shipping_details">Shipping Details</string>
    <string name="sh_lbl_order_id">Order ID -</string>
    <string name="sh_lbl_order_date">Order Date -</string>
    <string name="sh_lbl_give_ratings">Give Rating</string>
    <string name="sh_lbl_rate_5">/5</string>
    <string name="sh_lbl_delivery_status">Your Ordered Item has been Delivered</string>
    <string name="sh_lbl_return_replace"><![CDATA[Return & Replace]]></string>
    <string name="sh_lbl_cancel_order">Cancel Order</string>
    <string name="sh_lbl_see_return_policy">See Return Policy</string>
    <string name="sh_lbl_track_item">Track Item</string>
    <string name="sh_lbl_continue">Continue</string>
    <string name="sh_lbl_delivered_by">Delivery By,</string>
    <string name="sh_lbl_change_address">Change Address</string>
    <string name="sh_lbl_item_deliver_here">Item Deliver Here</string>
    <string name="sh_lbl_add_new_address">Add New address</string>
    <string name="sh_lbl_current_location">Use Current Location</string>
    <string name="sh_lbl_save_address">Save Address</string>
    <string name="sh_lbl_edit_address">Edit Address</string>
    <string name="sh_lbl_home">Home Address</string>
    <string name="sh_lbl_office_commercial">Work Address</string>
    <string name="sh_lbl_add_card">Add Card</string>
    <string name="sh_lbl_pay_with_debit_credit_card">Pay with Debit/Credit Card</string>
    <string name="sh_lbl_net_banking">Net Banking</string>
    <string name="sh_lbl_cash_on_delivery">Cash on Delivery</string>
    <string name="sh_lbl_other_wallet">Other Wallet</string>
    <string name="sh_lbl_valid">Valid</string>
    <string name="sh_lbl_cancel">Cancel</string>
    <string name="sh_lbl_change_qty">Change Quantity</string>
    <string name="sh_lbl_new_arrival">New Arrival</string>
    <string name="sh_lbl_popular">Popular</string>
    <string name="sh_lbl_help_center">Help Center</string>
    <string name="sh_lbl_quick_pay_cards">Quick Pay Cards</string>
    <string name="sh_lbl_my_offers">My Offers</string>
    <string name="sh_lbl_my_orders">My Orders</string>
    <string name="sh_lbl_address_manager">Address Manager</string>
    <string name="sh_lbl_verify_now">Verify now</string>
    <string name="sh_lbl_get_newest_offers">Get newest offers</string>
    <string name="sh_lbl_please_verify_your_email_or_number">Please verify your email or number</string>
    <string name="sh_lbl_next_time_buy">Next time buy</string>
    <string name="sh_lbl_remove">Remove</string>
    <string name="sh_lbl_move_to_cart">Move to Cart</string>
    <string name="sh_lbl_enable">Enable</string>
    <string name="sh_lbl_invite_now">Invite Now</string>
    <string name="sh_lbl_your_rewards">Your Rewards</string>
    <string name="sh_lbl_submit">Submit</string>
    <string name="sh_lbl_choose_item">Choose an item</string>
    <string name="sh_lbl_tabDescription">Description</string>
    <string name="sh_lbl_tab_more_info">More info</string>
    <string name="sh_lbl_tabReviews">Reviews</string>
    <string name="sh_lbl_qty">Qty:</string>
    <string name="sh_lbl_see_price_detail">See Price Detail</string>
    <string name="sh_lbl_edit">Edit</string>
    <string name="sh_lbl_remove_cart">Remove cart</string>
    <string name="sh_lbl_logout_confirmation">Are you want to logout?</string>
    <string name="sh_lbl_dialog_title">Confirmation</string>
    <string name="sh_lbl_yes">YES</string>
    <string name="sh_lbl_no">NO</string>
    <string name="sh_lbl_max">Max</string>
    <string name="sh_lbl_min">Min</string>
    <string name="sh_lbl_order">order</string>
    <string name="sh_lbl_sign_up_with">Sign up with</string>
    <string name="sh_btn_sign_out">Sign Out</string>
    <string name="sh_msg_confirmation">Are you sure you want to delete?</string>
    <string name="sh_error_no_internet">Oops!! You Are Not Connected To Internet</string>
    <string name="sh_error_field_required">Field Required</string>
    <string name="sh_error_pwd_digit_required">Maximum 6 digit Required</string>
    <string name="sh_error_enter_valid_email">Enter Valid Email</string>
    <string name="sh_error_password_not_matches">Password not matches</string>
    <string name="sh_error_gps_not_enabled">GPS location is not enabled.</string>
    <string name="sh_error_something_went_wrong">Something went wrong</string>
    <string name="sh_error_permission_required">Location Permission Required</string>
    <string name="sh_error_address_type">Please Select Address Type</string>
    <string name="sh_hint_email">Email</string>
    <string name="sh_hint_password">Password</string>
    <string name="sh_hint_confirm_password">Confirm Password</string>
    <string name="sh_hint_full_name">Full Name</string>
    <string name="sh_hint_address">Address</string>
    <string name="sh_hint_state">State</string>
    <string name="sh_hint_address_type">Address Type</string>
    <string name="sh_hint_city">City</string>
    <string name="sh_hint_pin_code">Pin code</string>
    <string name="sh_hint_mobile_no">Phone number</string>
    <string name="sh_text_start_to_shopping">Start to Shopping</string>
    <string name="sh_text_todo">TODO</string>
    <string name="sh_text_juliane_deerman">Juliane Deerman</string>
    <string name="sh_text__02">00</string>
    <string name="sh_text_121">$49</string>
    <string name="sh_text__10">00</string>
    <string name="sh_text_collection_2019">Collection 2019</string>
    <string name="sh_text_499">$49</string>
    <string name="sh_text_description">Blue solid woven regular top, has a round neck, three-quarter sleeves, stylised back
        Blue solid woven regular top, has a round neck, three-quarter sleeves, stylised back
    </string>
    <string name="sh_text_25_jun_monday">25 Jun,Monday</string>
    <string name="sh_text_black_colour">Black Colour</string>
    <string name="sh_text_solid">Solid</string>
    <string name="sh_text_airmix">Airmix</string>
    <string name="sh_text_seller_johnshops">Seller- Johnshops</string>
    <string name="sh_text_total_item_1">Total Item -</string>
    <string name="sh_text_orderId">FG5356364566</string>
    <string name="sh_text_date">24 Aug 2019</string>
    <string name="sh_text_order_approved">Order Approved</string>
    <string name="sh_text_item_delivered">Item Delivered</string>
    <string name="sh_text_pin_code">386466</string>
    <string name="sh_text_reward">There are many variations of passages of Lorem Ipsum available, but the majority have
        suffered alteration.
    </string>
    <string name="sh_text_mobile">+91 9639639631</string>
    <string name="sh_title_account">My Account</string>
    <string name="sh_title_reward">My Rewards</string>
    <string name="sh_title_payment">Payments</string>
    <string name="sh_title_my_orders">My Orders</string>
    <string name="sh_navigation_drawer_open">Open navigation drawer</string>
    <string name="sh_navigation_drawer_close">Close navigation drawer</string>
    <string name="sh_action_search">Search</string>
    <string name="sh_action_filter">Filter</string>
    <string name="sh_menu_my_cart">My Cart</string>
    <string name="sh_home">Home</string>
    <string name="sh_profile">Profile</string>
    <string name="sh_lbl_change_pswd">Change Password</string>
    <string name="sh_hint_new_password">New Password</string>
    <string name="sh_lbl_change_now">Change Now</string>
    <string name="sh_lbl_send_mail">Send mail</string>
    <string name="sh_lbl_email_to_woobox">Email to woobox</string>
    <string name="sh_lbl_from">From</string>
    <string name="sh_lbl_description">Description</string>
    <string name="sh_hint_description_here">Description here</string>
    <string name="sh_text_iqonicdesign_gmail_com">iqonicdesign@gmail.com</string>
    <string name="sh_lbl_length">Length</string>
    <string name="sh_lbl_width">Width</string>
    <string name="sh_hint_enter_old_password">Old password</string>
    <string name="sh_lbl_hop">hop</string>
    <string name="sh_lbl_shop">Shop</string>
    <string name="sh_reference_email">Johnduoe@gmail.com</string>
    <string name="sh_lbl_version_name">v 1.0.0</string>
</resources>