<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="@dimen/sh_spacing_standard_new"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sh_spacing_standard"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sh_spacing_standard_new"
            android:text="@string/sh_lbl_change_pswd"
            android:textAppearance="@style/FontBold"
            android:textColor="@color/ShopHop_textColorPrimary"
            android:textSize="@dimen/sh_font_size_xxlarge"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtOldPwd"
            style="@style/ShoHopFieldRounded"
            android:hint="@string/sh_hint_enter_old_password"
            android:autofillHints="@string/sh_hint_enter_old_password"
            android:inputType="textPassword"
             />

        <EditText
            android:id="@+id/edtNewPwd"
            style="@style/ShoHopFieldRounded"
            android:layout_marginTop="@dimen/sh_spacing_middle"
            android:hint="@string/sh_hint_new_password"
            android:autofillHints="@string/sh_hint_new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtConfirmPwd"
            style="@style/ShoHopFieldRounded"
            android:layout_marginTop="@dimen/sh_spacing_middle"
            android:hint="@string/sh_hint_confirm_password"
            android:autofillHints="@string/sh_hint_new_password"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChangePassword"
            style="@style/ShopHopMaterialButtonStyle.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sh_spacing_standard_new"
            android:layout_marginTop="@dimen/sh_spacing_large"
            android:layout_marginEnd="@dimen/sh_spacing_standard_new"
            android:layout_marginBottom="@dimen/sh_spacing_large"
            android:text="@string/sh_lbl_change_now"
            android:textSize="@dimen/sh_font_size_medium" />
    </LinearLayout>

</androidx.cardview.widget.CardView>